--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,3 +12,12 @@ spring.datasource.initialize=true
 spring.datasource.schema=classpath:/schema.sql
 spring.datasource.continue-on-error=true
 server.port=8081
+spring.devtools.livereload.enabled = true
+
+spring.thymeleaf.cache=false
+spring.thymeleaf.mode=HTML
+spring.thymeleaf.encoding=UTF-8
+spring.thymeleaf.prefix=file:src/main/resources/templates/
+
+spring.web.resources.static-locations=file:src/main/resources/static/
+spring.web.resources.cache.period=0
